--- a/source/css/home.css
+++ b/source/css/home.css
@@ -1,8 +1,29 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+.gallery {
+    width: 100%;
+    margin-top:20px;
+    height: 60vmin;
+    display: flex;
+    gap: 5px;
+}
 
+/* Gallery Images */
+.gallery img {
+    height: 100%;
+    overflow: hidden;
+    flex: 1;
+    object-fit: cover;
+    border-radius: 8px;
+    cursor: pointer;
+    transition:all 0.3s ;
+}
 
+/* Hover Effect */
+.gallery img:hover {
+    flex:4;
+}
 
 
 
@@ -16,7 +37,7 @@ main .content {
 }
 
 main .content h2 {
-    color: #018ba7;
+    color: #dd130c;
     font-family: Poppins;
     font-size: 24px;
    
