--- a/source/css/services.css
+++ b/source/css/services.css
@@ -48,9 +48,10 @@
 }
 
 .services-container h1 {
-    font-size: 30px;
+    font-size: 50px;
     color: #ffffff;
     margin: 2rem;
+    font-family: Poppins;
 }
 .services-container a {
     color:rgb(16, 0, 241);
