--- a/source/css/signup.css
+++ b/source/css/signup.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 body {
-    background-image: url("../Images/bg1.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    font-family: Arial, sans-serif;
+    font-family: Poppins;
     color: #fff;
     margin: 0;
     padding: 0;
@@ -36,7 +38,7 @@ body {
 input[type="text"],
 input[type="password"] {
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     border: 1px solid #adadad;
     border-radius: 20px;
     font-size: 16px;
